Feat: Issue, Backlog, DailyScrum 프론트와 통합 작업